--- a/LightTube/Resources/Localization/en.json
+++ b/LightTube/Resources/Localization/en.json
@@ -27,10 +27,12 @@
   "channel.banner": "Channel Banner",
   "channel.supporter.avatar": "User Avatar",
   "channel.accountsettings": "Account Settings",
-  "channel.tab.home": "Home",
+  "channel.header.subscribers": "{0} subscribers",
+  "channel.header.videos": "{0} videos",
+  "channel.tab.featured": "Home",
   "channel.tab.videos": "Videos",
   "channel.tab.shorts": "Shorts",
-  "channel.tab.live": "Live",
+  "channel.tab.streams": "Live",
   "channel.tab.playlists": "Playlists",
   "channel.tab.podcasts": "Podcasts",
   "channel.tab.releases": "Releases",
@@ -39,6 +41,7 @@
   "channel.tab.store": "Store",
   "channel.tab.about": "About",
   "channel.tab.search": "Search",
+  "channel.tagline.lighttube": "LightTube Channel",
   "channel.noplaylists": "This user doesn't have any public playlists.",
   
   "download.title": "Download video",
