--- a/LightTube/Resources/Localization/en.json
+++ b/LightTube/Resources/Localization/en.json
@@ -24,13 +24,22 @@
   "account.register.disabled": "This instance doesn't allow account registrations",
   "account.register.disabled.home": "Go to home",
 
+  "channel.about.description": "Description",
+  "channel.about.artistbio": "Artist Biography",
+  "channel.about.views": "{0} views",
+  "channel.about.joined": "Joined {0}",
+  "channel.about.links": "Links",
   "channel.banner": "Channel Banner",
   "channel.supporter.avatar": "User Avatar",
   "channel.accountsettings": "Account Settings",
-  "channel.tab.home": "Home",
+  "channel.header.subscribers": "{0} subscribers",
+  "channel.header.videos": "{0} videos",
+  "channel.recognition.title": "Our members",
+  "channel.recognition.subtitle": "Thank you, channel members!",
+  "channel.tab.featured": "Home",
   "channel.tab.videos": "Videos",
   "channel.tab.shorts": "Shorts",
-  "channel.tab.live": "Live",
+  "channel.tab.streams": "Live",
   "channel.tab.playlists": "Playlists",
   "channel.tab.podcasts": "Podcasts",
   "channel.tab.releases": "Releases",
@@ -39,6 +48,8 @@
   "channel.tab.store": "Store",
   "channel.tab.about": "About",
   "channel.tab.search": "Search",
+  "channel.tagline.lighttube": "LightTube Channel",
+  "channel.noplaylists": "This user doesn't have any public playlists.",
   
   "download.title": "Download video",
   "download.format.select": "Please select a format to download.",
@@ -109,11 +120,14 @@
   "playlist.removevideo.body": "Are you sure that you want to remove this video from playlist <b>\"{0}\"</b>",
   "playlist.removevideo.confirm": "Remove",
   "playlist.unavailable": "Playlist unavailable",
+  "playlist.video.uncached": "Uncached video. Load the video to update the cache",
   "playlist.videos.count": "{0} videos",
   "playlist.view.full": "View Full Playlist",
   "playlist.visibility.0": "Private",
   "playlist.visibility.1": "Unlisted",
   "playlist.visibility.2": "Public",
+
+  "post.view.youtube": "View on YouTube",
 
   "rss.title": "RSS",
   "rss.explain.title": "Use an RSS feed reader with LightTube",
@@ -164,6 +178,9 @@
   "search.filters.sort.date": "Upload date",
   "search.filters.sort.views": "View count",
   "search.filters.sort.rating": "Rating",
+  "search.showingresultsfor": "Showing results for <a href=\"{1}\">{0}</a>",
+  "search.searchinsteadfor": "Search instead for <a href=\"{1}\">{0}</a>",
+  "search.didyoumean": "Did you mean: <a href=\"{1}\">{0}</a>",
 
   "settings.account.htmltitle": "Account",
   "settings.account.title": "Account Settings",
@@ -226,9 +243,9 @@
   "video.subtitle": "{0} views • {1}",
   "video.movie": "Movie",
   "video.unavailable": "Unavailable",
+  "video.trailer.title": "Trailer",
+  "video.trailer.body": "Livestream will begin in {0}",
 
-  "watch.noscript.resolution": "Current video resolution:",
-  "watch.noscript.resolution.switch": "Switch to",
   "watch.like.unavailable": "Like",
   "watch.dislike.unavailable": "Dislike",
   "watch.comments": "Comments",
