Fix wrong translation value in /settings/account

--- a/LightTube/Resources/Localization/en.json
+++ b/LightTube/Resources/Localization/en.json
@@ -184,7 +184,7 @@
 
   "settings.account.htmltitle": "Account",
   "settings.account.title": "Account Settings",
-  "settings.account.delete": "Account Settings",
+  "settings.account.delete": "Delete Account",
   "settings.appearance.title": "Appearance",
   "settings.appearance.interface": "Interface",
   "settings.appearance.theme.title": "Theme",
