--- a/LightTube/Resources/Localization/en.json
+++ b/LightTube/Resources/Localization/en.json
@@ -99,6 +99,8 @@
   "pagination.first": "First Page",
   "pagination.next": "Next Page",
   
+  "player.audioQuality": "(Audio only) {0}kbps",
+  
   "playlist.add.title": "Add video to playlist",
   "playlist.add.body": "Please select the playlist to add this video into.",
   "playlist.add.confirm": "Add",
@@ -245,6 +247,9 @@
   "video.unavailable": "Unavailable",
   "video.trailer.title": "Trailer",
   "video.trailer.body": "Livestream will begin in {0}",
+  "video.watch": "Watch",
+  "video.listen": "Listen",
+  "video.download": "Download",
 
   "watch.like.unavailable": "Like",
   "watch.dislike.unavailable": "Dislike",
